Add route to query a single validator
